--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,9 +6,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h1 class="govuk-heading-xl">
-        {{ title }}
-      </h1>
+      <h1 class="govuk-heading-l">{{ title }}</h1>
 
       {{ govukButton({
         text: "Sign in",
