--- a/app/views/referrals/index.html
+++ b/app/views/referrals/index.html
@@ -35,7 +35,7 @@
                     text: "Referral date"
                   },
                   value: {
-                    text: referral.referralDate | date
+                    text: referral.referralDate | dateTime
                   }
                 },
                 {
