--- a/app/views/referrals/show.html
+++ b/app/views/referrals/show.html
@@ -21,14 +21,37 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">
-          {{referral.id}}
-        </span>
-        {{ title }}
-      </h1>
+      <span class="govuk-caption-l">{{referral.id}}</span>
+      <h1 class="govuk-heading-l">{{ title }}</h1>
 
       <p><a href="#" class="govuk-link--no-visited-state">Download files (ZIP)</a></p>
+
+      <div class="app-panel">
+        <h2 class="govuk-heading-m">
+          Summary
+        </h2>
+
+        {{ govukSummaryList({
+          rows: [
+            {
+              key: {
+                html: "Referral ID"
+              },
+              value: {
+                html: referral.id
+              }
+            },
+            {
+              key: {
+                html: "Referral date"
+              },
+              value: {
+                html: referral.referralDate | dateTime
+              }
+            }
+          ]
+        }) }}
+      </div>
 
       <div class="app-panel">
 
