--- a/app/views/referrals/show.html
+++ b/app/views/referrals/show.html
@@ -163,7 +163,7 @@
       <div class="app-panel">
 
         <h2 class="govuk-heading-m">
-          Role details
+          Employment details
         </h2>
 
         {% if referral.teacher.organisation %}
@@ -220,9 +220,7 @@
             } if roleDescription | length,
             {
               key: {
-                html: "Where they worked at the time of the alleged misconduct",
-                html: "Employer at the time of the alleged misconduct",
-                html: "Employer"
+                html: "Organisation"
               },
               value: {
                 html: teacherOrganisation
@@ -230,9 +228,7 @@
             } if referral.teacher.organisation,
             {
               key: {
-                html: "Where they worked at the time of the alleged misconduct",
-                html: "Employer at the time of the alleged misconduct",
-                html: "Employer"
+                html: "Organisation"
               },
               value: {
                 html: referrerOrganisation
@@ -261,19 +257,43 @@
               value: {
                 html: referral.teacher.jobEndReason
               }
-            } if referral.teacher.jobEndReason,
-            {
-              key: {
-                html: "Where they’re currently working",
-                html: "New employer"
-              },
-              value: {
-                html: newOrganisation
-              }
-            } if referral.teacher.newOrganisation
+            } if referral.teacher.jobEndReason
           ]
         }) }}
       </div>
+
+      {% if referral.teacher.newOrganisation %}
+        <div class="app-panel">
+
+          <h2 class="govuk-heading-m">
+            Other employment details
+          </h2>
+
+          {% set newOrganisation %}
+            {{appFormattedAddress({
+              name: referral.teacher.newOrganisation.name,
+              line1: referral.teacher.newOrganisation.address.line1,
+              line2: referral.teacher.newOrganisation.address.line2,
+              town: referral.teacher.newOrganisation.address.town,
+              postcode: referral.teacher.newOrganisation.address.postcode,
+              country: referral.teacher.newOrganisation.address.country
+            })}}
+          {% endset %}
+
+          {{ govukSummaryList({
+            rows: [
+              {
+                key: {
+                  html: "Organisation"
+                },
+                value: {
+                  html: newOrganisation
+                }
+              }
+            ]
+          }) }}
+        </div>
+      {% endif %}
       <div class="app-panel">
         <h2 class="govuk-heading-m">Allegation details</h2>
 
