--- a/app/views/referrals/show.html
+++ b/app/views/referrals/show.html
@@ -24,7 +24,7 @@
       <span class="govuk-caption-l">{{referral.id}}</span>
       <h1 class="govuk-heading-l">{{ title }}</h1>
 
-      <p><a href="#" class="govuk-link--no-visited-state">Download files (ZIP)</a></p>
+      <p><a href="#" class="govuk-link--no-visited-state">Download referral (ZIP)</a></p>
 
       <div class="app-panel">
         <h2 class="govuk-heading-m">
