--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -10,3 +10,14 @@ https://prototype-kit.service.gov.uk/docs/layouts
 {% block pageTitle %}
   {{title}} – {{serviceName}} – GOV.UK
 {% endblock %}
+
+{% block header %}
+  {% include "_includes/header.njk" %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.',
+    classes: 'govuk-width-container'
+  }) }}
+{% endblock %}
