--- a/app/views/referrals/index.html
+++ b/app/views/referrals/index.html
@@ -8,6 +8,8 @@
 
 {% block content %}
 
+  {{data | log}}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <h1 class="govuk-heading-l">
