--- a/app/views/account/password/reset/confirmation.html
+++ b/app/views/account/password/reset/confirmation.html
@@ -5,7 +5,7 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
-    href: "/reset-password"
+    href: "/account/password/reset"
   }) }}
 {% endblock %}
 
@@ -19,7 +19,7 @@
 
       <p>Check your spam and trash folder if you cannot find the email.</p>
 
-      <p>You can also <a href="/reset-password">reset your password again</a>.</p>
+      <p>You can also <a href="/account/password/reset">reset your password again</a>.</p>
 
 
     </div>
