--- a/app/views/account/password/edit/index.html
+++ b/app/views/account/password/edit/index.html
@@ -2,24 +2,17 @@
 
 {% set title = 'Change your password' %}
 
-{% block beforeContent %}
-  {{ govukBackLink({
-    text: "Back",
-    href: "/"
-  }) }}
-{% endblock %}
-
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <h1 class="govuk-heading-l">{{ title }}</h1>
 
-      <form method="post" action="/reset-password/confirmation">
+      <form method="post">
 
         {{ govukInput({
-          id: "[changePasswrod][password]",
-          name: "[changePasswrod][password]",
+          id: "[changePassword][password]",
+          name: "[changePassword][password]",
           type: "password",
           label: {
             text: "New password",
@@ -28,8 +21,8 @@
         }) }}
 
         {{ govukInput({
-          id: "[changePasswrod][confirmPassword]",
-          name: "[changePasswrod][confirmPassword]",
+          id: "[changePassword][confirmPassword]",
+          name: "[changePassword][confirmPassword]",
           type: "password",
           label: {
             text: "Confirm new password",
@@ -38,7 +31,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Save new password"
+          text: "Update password"
         }) }}
       </form>
     </div>
