--- a/app/views/referrals/show.html
+++ b/app/views/referrals/show.html
@@ -284,12 +284,28 @@
             } if roleDescription | length,
             {
               key: {
+                html: "Do you know the name and address of the organisation where the alleged misconduct took place?"
+              },
+              value: {
+                html: referral.teacher.knowWhereTheyWorked
+              }
+            } if referral.teacher.knowWhereTheyWorked == 'No',
+            {
+              key: {
                 html: "Organisation"
               },
               value: {
                 html: teacherOrganisation
               }
-            } if referral.teacher.organisation,
+            } if referral.teacher.knowWhereTheyWorked == 'Yes',
+            {
+              key: {
+                html: "Were they employed at the same organisation as you at the time of the alleged misconduct?"
+              },
+              value: {
+                html: referral.teacher.workedAtSameOrganisation
+              }
+            } if referral.teacher.workedAtSameOrganisation == 'No',
             {
               key: {
                 html: "Organisation"
@@ -300,12 +316,28 @@
             } if referral.teacher.workedAtSameOrganisation == 'Yes',
             {
               key: {
+                html: "Do you know when they started the job?"
+              },
+              value: {
+                html: referral.teacher.hasJobStartDate
+              }
+            } if referral.teacher.hasJobStartDate == 'No',
+            {
+              key: {
                 html: "Job start date"
               },
               value: {
                 html: referral.teacher.jobStartDate | date
               }
-            } if referral.teacher.jobStartDate,
+            } if referral.teacher.hasJobStartDate == 'Yes',
+            {
+              key: {
+                html: "Do you know when they left the job?"
+              },
+              value: {
+                html: referral.teacher.hasJobEndDate
+              }
+            } if referral.teacher.hasJobEndDate == 'No',
             {
               key: {
                 html: "Job end date"
@@ -313,7 +345,7 @@
               value: {
                 html: referral.teacher.jobEndDate | date
               }
-            } if referral.teacher.jobEndDate,
+            } if referral.teacher.hasJobEndDate == 'Yes',
             {
               key: {
                 html: "Reason they left the job"
@@ -326,9 +358,9 @@
         }) }}
       </div>
 
-      {% if referral.teacher.newOrganisation %}
-        <div class="app-panel">
+      {% if referral.teacher.isWorkingSomewhereElse %}
 
+        <div class="app-panel">
           <h2 class="govuk-heading-m">
             Other employment details
           </h2>
@@ -348,16 +380,33 @@
             rows: [
               {
                 key: {
+                  html: "Are they employed somewhere else?"
+                },
+                value: {
+                  html: referral.teacher.isWorkingSomewhereElse
+                }
+              } if not referral.teacher.isWorkingSomewhereElse == 'Yes',
+              {
+                key: {
+                  html: "Do you know the name and address of the organisation where they’re employed?"
+                },
+                value: {
+                  html: referral.teacher.knowWhereTheyWork
+                }
+              } if referral.teacher.knowWhereTheyWork == 'No',
+              {
+                key: {
                   html: "Organisation"
                 },
                 value: {
                   html: newOrganisation
                 }
-              }
+              } if referral.teacher.knowWhereTheyWork == 'Yes'
             ]
           }) }}
         </div>
       {% endif %}
+
       <div class="app-panel">
         <h2 class="govuk-heading-m">Allegation details</h2>
 
